monticore-generator/src/test/resources/cocos/invalid/A4030/A4030.mc4
package cocos.invalid.A4030;

grammar A4030 {
  A;

  abstract B extends A astextends C;

}
